Fix the z-index and max-width styles
Makes the intro bigger and layered properly

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -18,7 +18,7 @@ body
   left             0
   width            100%
   height           100%
-  z-index          10
+  z-index          9999
 
   img
     position absolute
@@ -42,6 +42,7 @@ body
   -webkit-box-shadow 0px 5px 0px 0px rgba(0, 0, 0, 0.3)
   box-shadow         0px 5px 0px 0px rgba(0, 0, 0, 0.3)
   width              100%
+  z-index            100
 
   div
     display inline-block
@@ -87,7 +88,7 @@ body
   margin             0 auto
   padding            10px 20px
   border             thin solid black
-  max-width          800px
+  max-width          1024px
   background-color   #dff0d8
 
 .box-shadow
